--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=USER-SERVICE
 
 spring.jpa.show-sql=true
 
@@ -8,3 +9,10 @@ spring.datasource.username=root
 spring.datasource.password=Suresh@007
 spring.jpa.hibernate.ddl-auto=update
 
+
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+
+eureka.client.register-with-eureka=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
