--- a/RatingService/src/main/resources/application.properties
+++ b/RatingService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
+spring.application.name=RATING-SERVICE
 
 
 server.port=8083
@@ -13,3 +14,9 @@ spring.datasource.username=postgres
 spring.datasource.password=Welcome$21
 spring.jpa.hibernate.ddl-auto=update
 
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+
+eureka.client.register-with-eureka=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
