--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=USER-SERVICE
 
+server.port=8081
 spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/microservices
