API Gateway configuring multiple url of microservice in UserService

--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -13,7 +13,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #FOR USERSERVICE
 spring.cloud.gateway.routes[0].id=USER-SERVICE
 spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**,/staffs/**
 
 #FOR RATINGSERVICE
 spring.cloud.gateway.routes[1].id=RATING-SERVICE
