--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -3,12 +3,13 @@ server.port=8084
 
 spring.application.name=API-GATEWAY
 
-eureka.instance.prefer-ip-address=true
-eureka.client.fetch-registry=true
+#eureka.instance.prefer-ip-address=true
+#eureka.client.fetch-registry=true
 
-eureka.client.register-with-eureka=true
+#eureka.client.register-with-eureka=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:8085
 
 #FOR USERSERVICE
 spring.cloud.gateway.routes[0].id=USER-SERVICE
