--- a/RatingService/src/main/resources/application.properties
+++ b/RatingService/src/main/resources/application.properties
@@ -14,9 +14,11 @@ spring.datasource.username=postgres
 spring.datasource.password=Welcome$21
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.prefer-ip-address=true
-eureka.client.fetch-registry=true
+#eureka.instance.prefer-ip-address=true
+#eureka.client.fetch-registry=true
 
-eureka.client.register-with-eureka=true
+#eureka.client.register-with-eureka=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.config.import=optional:configserver:http://localhost:8085
