--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.datasource.password=Suresh@007
 spring.jpa.hibernate.ddl-auto=update
 
 
-eureka.instance.prefer-ip-address=true
-eureka.client.fetch-registry=true
+#eureka.instance.prefer-ip-address=true
+#eureka.client.fetch-registry=true
 
-eureka.client.register-with-eureka=true
+#eureka.client.register-with-eureka=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.config.import=optional:configserver:http://localhost:8085
