implemented Circuit breaker using ResilienceDj

--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -19,3 +19,21 @@ spring.jpa.hibernate.ddl-auto=update
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.config.import=optional:configserver:http://localhost:8085
+
+##Circuitbreaker dependency
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.wait-duration-in-open-state=6s
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-size=10
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-type=COUNT_BASED
+
+
+
+
