--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -35,5 +35,6 @@ resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-size=10
 resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-type=COUNT_BASED
 
 
-
+resilience4j.retry.instances.ratingHotelBreaker.max-attempts=3
+resilience4j.retry.instances.ratingHotelBreaker.wait-duration=5s
 
