understand and implement Rate Limiter

--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -34,7 +34,12 @@ resilience4j.circuitbreaker.instances.ratingHotelBreaker.permitted-number-of-cal
 resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-size=10
 resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-type=COUNT_BASED
 
-
+#retry
 resilience4j.retry.instances.ratingHotelBreaker.max-attempts=3
 resilience4j.retry.instances.ratingHotelBreaker.wait-duration=5s
+
+#RAteLimiter
+resilience4j.ratelimiter.instances.ratingHotelBreaker.limit-refresh-period=4s
+resilience4j.ratelimiter.instances.ratingHotelBreaker.limit-for-period=2
+resilience4j.ratelimiter.instances.ratingHotelBreaker.timeout-duration=0s
 
