implement Spring Security at API GATEWAY using OKTA

--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -25,3 +25,16 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/ratings/**
 spring.cloud.gateway.routes[2].id=HOTEL-SERVICE
 spring.cloud.gateway.routes[2].uri=lb://HOTEL-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/hotels/**
+
+#okta configuration for api gateway
+okta.oauth2.issuer=https://dev-75495177.okta.com/oauth2/default
+okta.oauth2.audience=api://default
+okta.oauth2.client-id=0oa88vp1vqjv1seTl5d7
+okta.oauth2.client-secret=RC3FNsNmMV7VvUCtXdjreEWn94YBURrVDxAgRqHl
+okta.oauth2.scopes=openid, profile, email, offline_access
+
+
+
+
+
+
