implement Spring security in microservices

--- a/HotelService/src/main/resources/application.properties
+++ b/HotelService/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.config.import=optional:configserver:http://localhost:8085
 
 #spring.profiles.active=dev
+
+#okta configuration for other microservices
+okta.oauth2.issuer=https://dev-75495177.okta.com/oauth2/default
+okta.oauth2.audience=api://default
