--- a/RatingService/src/main/resources/application.properties
+++ b/RatingService/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.jpa.hibernate.ddl-auto=update
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.config.import=optional:configserver:http://localhost:8085
+
+
+#okta configuration for other microservices
+okta.oauth2.issuer=https://dev-75495177.okta.com/oauth2/default
+okta.oauth2.audience=api://default
