--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -43,3 +43,19 @@ resilience4j.ratelimiter.instances.ratingHotelBreaker.limit-refresh-period=4s
 resilience4j.ratelimiter.instances.ratingHotelBreaker.limit-for-period=2
 resilience4j.ratelimiter.instances.ratingHotelBreaker.timeout-duration=0s
 
+
+#okta configuration for user service
+okta.oauth2.issuer=https://dev-75495177.okta.com/oauth2/default
+okta.oauth2.audience=api://default
+
+#client configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-75495177.okta.com/oauth2/default
+spring.security.oauth2.client.registration.my-internal-client.provider=okta
+spring.security.oauth2.client.registration.my-internal-client.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.my-internal-client.scope=internal
+spring.security.oauth2.client.registration.my-internal-client.client-id=0oa88vp1vqjv1seTl5d7
+spring.security.oauth2.client.registration.my-internal-client.client-secret=RC3FNsNmMV7VvUCtXdjreEWn94YBURrVDxAgRqHl
+spring.security.oauth2.client.provider.okta.issuer-uri=https://dev-75495177.okta.com/oauth2/default
+
+
+
