implement spring security with okta on other microservices API internally - if i call the hotel api it will give combined response Hotel-rating of that hotal-user who gave rating. we can't access some of the API's directly, can access only through main API

--- a/HotelService/src/main/resources/application.properties
+++ b/HotelService/src/main/resources/application.properties
@@ -26,3 +26,15 @@ spring.config.import=optional:configserver:http://localhost:8085
 #okta configuration for other microservices
 okta.oauth2.issuer=https://dev-75495177.okta.com/oauth2/default
 okta.oauth2.audience=api://default
+
+
+#client configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-75495177.okta.com/oauth2/default
+spring.security.oauth2.client.registration.my-internal-client.provider=okta
+spring.security.oauth2.client.registration.my-internal-client.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.my-internal-client.scope=internal
+spring.security.oauth2.client.registration.my-internal-client.client-id=0oa88vp1vqjv1seTl5d7
+spring.security.oauth2.client.registration.my-internal-client.client-secret=RC3FNsNmMV7VvUCtXdjreEWn94YBURrVDxAgRqHl
+spring.security.oauth2.client.provider.okta.issuer-uri=https://dev-75495177.okta.com/oauth2/default
+
+
