--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.application.name=CONFIG-SERVER
 spring.cloud.config.server.git.uri=https://github.com/sureshjungade/configserver
 
 spring.cloud.config.server.git.clone-on-start=true
+
+hello.message=hii
